thumbnail and info download

--- a/read.ipynb
+++ b/read.ipynb
@@ -953,6 +953,91 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "channelId: [b'UCQJL_GN-mKW5QLpbK2PJk9g' b'UCOj5e5vveMzgwv2hHOFODLA']\n",
+      "channelTitle: [b'Maciej Tomaszyk' b'Yarasky']\n",
+      "commentCount: [b'12' b'144']\n",
+      "description: [b'Nowa, lepsza wersja(zmniejszone napisy, inne proporcje ekranu) niedawno wyemitowanego przez MoonScoopa trailera Kod Lyoko Ewolucja, z polskimi napisami. T\\xc5\\x82umaczenie na podstawie tesktu angielskiego z komentarzy do oryginalnego trailera, a umieszczonego tu: http://forum.codelyoko.pl/viewtopic.php?f=11&t=7&start=650#p34104\\nW niekt\\xc3\\xb3rych momentach nie by\\xc5\\x82em jednak do ko\\xc5\\x84ca pewien jak przet\\xc5\\x82umaczy\\xc4\\x87, tak wi\\xc4\\x99c za wszelkie b\\xc5\\x82\\xc4\\x99dy z g\\xc3\\xb3ry przepraszam.\\nWykonane dla: kodlyokopowr\\xc3\\xb3txany.bnx.pl... i wszystkich fan\\xc3\\xb3w Kodu Lyoko oczywi\\xc5\\x9bcie;)'\n",
+      " b'Kunnen we de 800 duimpjes omhoog halen?\\n\\xe2\\x9e\\x9c Studio Spawntrappen - http://youtu.be/BhHlNqsiT5k\\n\\xe2\\x9e\\x9c Magma Triple Kills - http://youtu.be/K5IZXwKCwV8\\n\\n\\xe2\\x97\\x8f Twitter - https://twitter.com/YaraskyGaming\\n\\xe2\\x97\\x8f Twitch - http://www.twitch.tv/yaraskygaming\\n\\xe2\\x97\\x8f Facebook - http://www.facebook.com/YaraskyGaming\\n\\n\\xe2\\x97\\x8f Sponsor GameGear - http://www.gamegear.be/\\n\\xe2\\x97\\x8f Sponsor Kinguin - http://goo.gl/Oz8w3']\n",
+      "duration_seconds: [145. 153.]\n",
+      "favoriteCount: [b'0' b'0']\n",
+      "likeCount: [b'15' b'949']\n",
+      "publishedAt: [b'2012-12-25T01:54:23Z' b'2013-05-19T15:43:38Z']\n",
+      "tags: [b'Trailer, Official Trailer, polish, polski, napisy pl, polish sub, code lyoko evolution pl, code lyoko evolution, Poland (Country), Teaser Trailer'\n",
+      " b'Yarasky, Jan, YaraskyGaming, Gaming, Dutch, Commentary, Dutch Commentary, Nederland, Nederlands, Commentaar, Black, Ops, Call, of, Duty, Call of Duty, COD, Black Ops 2, BO2, Tips, Tricks, Epic, Hilarious, Grappig, Funny, Comeback, Community, Tactics, best, content, must, see, watch, Number 1, Nummer, PS3, Playstation, Store, Giveaway, Gratis, Spullen, Xbox, Xbox360, Premium, PC, Computer, Gamer, nuclear, ghosts, release, new, create, class, points, system, awesome, epic, funny, real, ghost, idea, great, appreciate']\n",
+      "title: [b'KLPX TV -  Code Lyoko Evolution oficjalny trailer - napisy pl 2.0'\n",
+      " b'Black Ops 2 - Ghosts Punten Systeem Idee\\xc3\\xabn? - Fast Nuketown GunGame (Dutch Commentary)']\n",
+      "videoId: [b'1RvBnf-2YzQ' b'Xobpt0Cxmi8']\n",
+      "viewCount: [b'5757' b'6034']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import h5py\n",
+    "import numpy as np\n",
+    "from PIL import Image\n",
+    "\n",
+    "def read_hdf5(file_path):\n",
+    "    data = {}\n",
+    "    with h5py.File(file_path, 'r') as hf:\n",
+    "        for key in hf.keys():\n",
+    "            # Check if data is an image\n",
+    "            if key == 'thumbnailStandard':\n",
+    "                # Convert array back to image\n",
+    "                images = [Image.fromarray(img) for img in hf[key][:]]\n",
+    "                data[key] = images\n",
+    "            else:\n",
+    "                data[key] = hf[key][:]\n",
+    "\n",
+    "    return data\n",
+    "\n",
+    "def main():\n",
+    "    file_path = 'youtube_video_details.hdf5'\n",
+    "    data = read_hdf5(file_path)\n",
+    "\n",
+    "    # Output some data to verify\n",
+    "    for key, value in data.items():\n",
+    "        if key == 'thumbnailStandard':\n",
+    "            # Display the first image to check\n",
+    "            value[1].show()\n",
+    "        else:\n",
+    "            print(f\"{key}: {value}\")\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    main()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['title', 'tags', 'viewCount', 'likeCount', 'favoriteCount',\n",
+       "       'commentCount', 'description', 'channelId', 'channelTitle',\n",
+       "       'publishedAt', 'thumbnailStandard', 'duration_seconds'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
